--- a/deploy/web/gameapp/src/pages/GamePage/ChatDisplay/ChatControls/ChatInput/styles.css
+++ b/deploy/web/gameapp/src/pages/GamePage/ChatDisplay/ChatControls/ChatInput/styles.css
@@ -33,7 +33,7 @@ input:focus {
   font-size: 1em;
   width: 5em;
   text-align: center;
-  padding: 0.5em;
+  padding: 0 0.5em 0 0.5em;
   box-shadow: 1px 1px 4px black;
   cursor: pointer;
   display: flex;
